feat:实现套餐界面样式

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -9,17 +9,17 @@ $yellow:#FEC171;
 $panGreen: #30B08F;
 
 // 默认菜单主题风格
-$base-menu-color:#bfcbd9;
-$base-menu-color-active:#f4f4f5;
-$base-menu-background:#304156;
-$base-logo-title-color: #ffffff;
+$base-menu-color:#fff;
+$base-menu-color-active:#33FFD0;
+$base-menu-background:#4A64DE;
+$base-logo-title-color:#ffffff;
 
 $base-menu-light-color:rgba(0,0,0,.70);
 $base-menu-light-background:#ffffff;
 $base-logo-light-title-color: #001529;
 
-$base-sub-menu-background:#1f2d3d;
-$base-sub-menu-hover:#001528;
+$base-sub-menu-background:#3F52B9;
+$base-sub-menu-hover: #2e44bb;
 
 // 自定义暗色菜单风格
 /**
